--- a/themes/finna2/less/finna/finnaicons.less
+++ b/themes/finna2/less/finna/finnaicons.less
@@ -667,6 +667,23 @@ table .iconlabel {
 .iconlabel.other-records:before {
     content: "\e00d";
 }
+
+.nav-dropdown-toggle {
+    &:before {
+        font-family: 'icomoon';
+        content: "\e00d";
+        margin-right: 5px;
+        font-size: 1.3em;
+        vertical-align: middle;
+    }
+    &:after {
+        font-family: icomoon;
+        content: "\e613";
+        vertical-align: middle;
+        margin-left: 5px;
+    }
+}
+
 /** toolbar icons **/
 .nav-pills .fa {
     font-family: icomoon;
