--- a/themes/finna2/less/finna/search.less
+++ b/themes/finna2/less/finna/search.less
@@ -541,8 +541,7 @@ mark, .highlight {
   padding: 5px 0 5px 0;
   & .checkbox label {
     display: inline-block;
-    padding: 7px;
-    margin: 5px;
+    padding: 10px 0px;
   }
   & .filters-term {
     font-size: 0.8em
