--- a/themes/finna2/less/finna/searchbox.less
+++ b/themes/finna2/less/finna/searchbox.less
@@ -132,6 +132,11 @@
 
   .search-links {
     margin-top: 15px;
+    @media (max-width: @screen-xs-max) {
+      a {
+        margin-bottom: 5px;
+      }
+    }
   }
 }
 
